tests/compile/fail/borrow.stderr
error[E0502]: cannot borrow `dynref` as mutable because it is also borrowed as immutable
  --> tests/compile/fail/borrow.rs:10:32
   |
9  |     let a = DynRefMut::borrow(&dynref);
   |                               ------- immutable borrow occurs here
10 |     let b = DynRefMut::borrow_mut(&mut dynref);
   |                                   ^^^^^^^^^^^ mutable borrow occurs here
11 |     let _ = (a, b);
   |              - immutable borrow later used here

error[E0502]: cannot borrow `dynref` as mutable because it is also borrowed as immutable
  --> tests/compile/fail/borrow.rs:16:32
   |
15 |     let a = DynRefMut::borrow(&dynref);
   |                               ------- immutable borrow occurs here
16 |     let b = DynRefMut::borrow_mut(&mut dynref);
   |                                   ^^^^^^^^^^^ mutable borrow occurs here
17 |     let _ = (a, b);
   |              - immutable borrow later used here

error[E0502]: cannot borrow `dynref` as mutable because it is also borrowed as immutable
  --> tests/compile/fail/borrow.rs:22:32
   |
21 |     let a = DynRefMut::borrow(&dynref);
   |                               ------- immutable borrow occurs here
22 |     let b = DynRefMut::borrow_mut(&mut dynref);
   |                                   ^^^^^^^^^^^ mutable borrow occurs here
23 |     let _ = (a, b);
   |              - immutable borrow later used here
